<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sch_monthly_payment_label"
            android:id="@+id/schMonthlyPayemntLabel"
            android:width="140dp"
            android:textStyle="bold|italic"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sch_monthly_payment_amount"
            android:id="@+id/schMonthlyPaymentAmount"
            android:textSize="15dp"
            android:textStyle="bold|italic"
            android:width="75dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:id="@+id/plusSign"
            android:textSize="15dp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/added_monthly_payment"
            android:id="@+id/addedMonthlyPayment"
            android:inputType="numberDecimal"
            android:textSize="15dp"
            android:selectAllOnFocus="true"/>
    </TableRow>

    <ScrollView>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/tlschedule">




    <TableRow android:id="@+id/displayTable">
         <TextView
            android:layout_column="0"
            android:text="Pmt#"
            android:padding="3dip"
             android:width="45dp"
             android:gravity="left"
             android:textStyle="bold" />
        <TextView
            android:text="Amount"
            android:padding="2dip"
            android:width="72dp"
            android:gravity="left|center"
            android:textStyle="bold" />
        <TextView
            android:text="Interest"
            android:width="68dp"
            android:gravity="left"
            android:textStyle="bold" />
        <TextView
            android:text="Pricipal"
            android:width="66dp"
            android:gravity="left"
            android:textStyle="bold" />
        <TextView
            android:text="Remaining Bal"
            android:width="120dp"
            android:gravity="left"
            android:textStyle="bold"
            android:lines="1" />
        </TableRow>
    </TableLayout>
   </ScrollView>

</TableLayout>